# qqbot

./: .env.dev  .env.prod  README.md  bot.py  pyproject.toml
data/: lolicon.db  setu_config.json
data/draw_card/: azur.json  fgo.json  fgo_card.json  genshin.json  genshin_arms.json  guardian.json  guardian_arms.json  onmyoji.json  pcr.json  pretty.json  pretty_card.json  prts.json
plugins/: FAQ.py  ai.py  bainian.py  bilibili.py  chuo.py  community.py  crazy4.py  daily.py  ditu.py  employ.py  fahuo.py  gpa.py  haogan.json  haogan.py  haohelp.py  help.py  http1.py  maomao.py  qa.json  qa.py  quotations.py  setu.py  shitang.py  test.py  tianqi.py  util.py  weidian.py  xinpin.py  yunshi.py
plugins/nonebot_plugin_apscheduler-0.1.2.dist-info/: RECORD
plugins/nonebot_plugin_emojimix/: __init__.py  data_source.py
plugins/nonebot_plugin_fortune/: __init__.py  config.py  data_source.py  utils.py
plugins/nonebot_plugin_setu/: __init__.py  create_file.py  getPic.py
plugins/nonebot_plugin_setu-1.1.1.dist-info/: RECORD
plugins/nonebot_plugin_simplemusic-0.1.1.dist-info/: METADATA
plugins/nonebot_plugin_tarot/: __init__.py  config.py  data_source.py
plugins/nonebot_plugin_tarot-0.3.2.dist-info/: METADATA
plugins/source/1/: rename.py
ucasmjc/plugins/: FAQ.py  aaa.py  bilibili.py  chuo.py  community.py  crazy4.py  daily.py  ditu.py  employ.py  fahuo.py  gpa.py  haogan.json  haogan.py  haohelp.py  help.py  http1.py  maomao.py  place.py  qa.json  qa.py  quotations.py  setu.py  shitang.py  test.py  tianqi.py  util.py  weidian.py  withdraw.py  xinpin.py  yunshi.py
(+21 files in other folders)
