[tool.poetry]
name = "ucasmjc"
version = "0.1.0"
description = "ucasmjc"
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7.3"
nonebot2 = "^2.0.0-beta.1"

[tool.poetry.dev-dependencies]
nb-cli = "^0.6.0"

[tool.nonebot]
plugins = [ "nonebot_plugin_simplemusic", "nonebot_plugin_tarot", "nonebot_plugin_emojimix","nonebot_plugin_setu","nonebot_plugin_fortune",
"nonebot_plugin_wordcloud","nonebot-plugin-chatrecorder","nonebot_plugin_datastore"]
plugin_dirs = ["ucasmjc/plugins"]

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
